Сделаны работающими все запросы, кроме /transaction/list/ , /transaction/update/{{accountId}}/ , /transaction/list/{ownerId}/
